--- a/portfolio.html
+++ b/portfolio.html
@@ -54,8 +54,11 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-12">
                             <div class="square-card">
-                            <a href="#" alt="square card"><img src="images/Book1.jpg" width="100%" height="auto"></a>
-                                <div class="card-header"></div>
+                                <a href="#" alt="square card"><img src="images/Book1.jpg" width="100%" height="auto"></a>
+                                    <div class="overlay">
+                                        <h2>Booklet</h2>
+                                        <a id="info" href="images/Book1.jpg">Click Here</a>
+                                    </div>  
                             </div>
                             
                         </div>
@@ -63,140 +66,230 @@
                         <div class="col-md-3 col-sm-12">
                             <div class="square-card">
                             <a href="#" alt="square card"><img src="images/Book2.jpg" width="100%" height="auto"></a>
-                                <div class="card-header"></div>
+                                <div class="overlay">
+                                    <h2>Booklet</h2>
+                                    <a id="info" href="images/Book2.jpg">Click Here</a>
+                                </div>  
+                            </div>
+                        </div>
+
+                        <div class="col-md-3 col-sm-12">
+                            <div class="square-card">
+                            <a href="#" alt="square card"><img src="images/Book7.jpg" width="100%" height="auto"></a>
+                                <div class="overlay">
+                                    <h2>Booklet</h2>
+                                    <a id="info" href="images/Book7.jpg">Click Here</a>
+                                </div>  
+                            </div>
+                        </div>
+
+                        <div class="col-md-3 col-sm-12">
+                            <div class="square-card">
+                            <a href="#" alt="square card"><img src="images/Book8.jpg" width="100%" height="auto"></a>
+                                <div class="overlay">
+                                    <h2>Booklet</h2>
+                                    <a id="info" href="images/Book8.jpg">Click Here</a>
+                                </div>  
                             </div>
                         </div>
 
                         <div class="col-md-3 col-sm-12">
                             <div class="square-card">
                             <a href="#" alt="square card"><img src="images/Book3.jpg" width="100%" height="auto"></a>
-                                <div class="card-header"></div>
+                                <div class="overlay">
+                                    <h2>Booklet</h2>
+                                    <a id="info" href="images/Book3.jpg">Click Here</a>
+                                </div>  
                             </div>
                         </div>
 
                         <div class="col-md-3 col-sm-12">
                             <div class="square-card">
                             <a href="#" alt="square card"><img src="images/Book4.jpg" width="100%" height="auto"></a>
-                                <div class="card-header"></div>
+                                <div class="overlay">
+                                    <h2>Booklet</h2>
+                                    <a id="info" href="images/Book4.jpg">Click Here</a>
+                                </div>  
                             </div>
                         </div>
 
                         <div class="col-md-3 col-sm-12">
                             <div class="square-card">
                             <a href="#" alt="square card"><img src="images/Book5.jpg" width="100%" height="auto"></a>
-                                <div class="card-header"></div>
+                                <div class="overlay">
+                                    <h2>Booklet</h2>
+                                    <a id="info" href="images/Book5.jpg">Click Here</a>
+                                </div>  
                             </div>
                         </div>
 
                         <div class="col-md-3 col-sm-12">
                             <div class="square-card">
                             <a href="#" alt="square card"><img src="images/Book6.jpg" width="100%" height="auto"></a>
-                                <div class="card-header"></div>
+                                <div class="overlay">
+                                    <h2>Booklet</h2>
+                                    <a id="info" href="images/Book6.jpg">Click Here</a>
+                                </div>  
                             </div>
                         </div>
 
                         <div class="col-md-3 col-sm-12">
                             <div class="square-card">
                             <a href="#" alt="square card"><img src="images/App1.png" width="100%" height="auto"></a>
-                                <div class="card-header"></div>
+                                <div class="overlay">
+                                    <h2>DPAC App</h2>
+                                    <a id="info" href="images/App1.png">Click Here</a>
+                                </div>  
                             </div>
                         </div>
 
                         <div class="col-md-3 col-sm-12">
                             <div class="square-card">
                             <a href="#" alt="square card"><img src="images/App2.png" width="100%" height="auto"></a>
-                                <div class="card-header"></div>
+                                <div class="overlay">
+                                    <h2>DPAC App</h2>
+                                    <a id="info" href="images/App2.png">Click Here</a>
+                                </div>  
                             </div>
                         </div>
 
                         <div class="col-md-3 col-sm-12">
                             <div class="square-card">
                             <a href="#" alt="square card"><img src="images/App3.png" width="100%" height="auto"></a>
-                                <div class="card-header"></div>
+                                <div class="overlay">
+                                    <h2>DPAC App</h2>
+                                    <a id="info" href="images/App3.png">Click Here</a>
+                                </div>  
                             </div>
                         </div>
 
                         <div class="col-md-3 col-sm-12">
                             <div class="square-card">
                             <a href="#" alt="square card"><img src="images/App5.png" width="100%" height="auto"></a>
-                                <div class="card-header"></div>
+                                <div class="overlay">
+                                    <h2>DPAC App</h2>
+                                    <a id="info" href="images/App5.png">Click Here</a>
+                                </div>  
                             </div>
                         </div>
 
                         <div class="col-md-3 col-sm-12">
                             <div class="square-card">
                             <a href="#" alt="square card"><img src="images/KH1.png" width="100%" height="auto"></a>
-                                <div class="card-header"></div>
+                                <div class="overlay">
+                                    <h2>Kenya Hara Website's</h2>
+                                    <a id="info" href="images/KH1.png">Click Here</a>
+                                </div>  
                             </div>
                         </div>
 
                         <div class="col-md-3 col-sm-12">
                             <div class="square-card">
                             <a href="#" alt="square card"><img src="images/KH2.png" width="100%" height="auto"></a>
-                                <div class="card-header"></div>
+                                <div class="overlay">
+                                    <h2>Kenya Hara Website's</h2>
+                                    <a id="info" href="images/KH2.png">Click Here</a>
+                                </div>  
                             </div>
                         </div>
 
                         <div class="col-md-3 col-sm-12">
                             <div class="square-card">
                             <a href="#" alt="square card"><img src="images/KH3.png" width="100%" height="auto"></a>
-                                <div class="card-header"></div>
+                                <div class="overlay">
+                                    <h2>Kenya Hara Website's</h2>
+                                    <a id="info" href="images/KH3.png">Click Here</a>
+                                </div>  
                             </div>
                         </div>
 
                         <div class="col-md-3 col-sm-12">
                             <div class="square-card">
                             <a href="#" alt="square card"><img src="images/KH4.png" width="100%" height="auto"></a>
-                                <div class="card-header"></div>
+                                <div class="overlay">
+                                    <h2>Kenya Hara Website's</h2>
+                                    <a id="info" href="images/KH4.png">Click Here</a>
+                                </div>  
                             </div>
                         </div>
 
                         <div class="col-md-3 col-sm-12">
                             <div class="square-card">
                             <a href="#" alt="square card"><img src="images/P1.JPG" width="100%" height="auto"></a>
-                                <div class="card-header"></div>
+                                <div class="overlay">
+                                    <h2>Photograph</h2>
+                                    <a id="info" href="images/P1.JPG">Click Here</a>
+                                </div>  
                             </div>
                         </div>
 
                         <div class="col-md-3 col-sm-12">
                             <div class="square-card">
                             <a href="#" alt="square card"><img src="images/P2.JPG" width="100%" height="auto"></a>
-                                <div class="card-header"></div>
+                                <div class="overlay">
+                                    <h2>Photograph</h2>
+                                    <a id="info" href="images/P2.JPG">Click Here</a>
+                                </div>  
                             </div>
                         </div>
 
                         <div class="col-md-3 col-sm-12">
                             <div class="square-card">
                             <a href="#" alt="square card"><img src="images/P3.JPG" width="100%" height="auto"></a>
-                                <div class="card-header"></div>
+                                <div class="overlay">
+                                    <h2>Photograph</h2>
+                                    <a id="info" href="images/P3.JPG">Click Here</a>
+                                </div>  
                             </div>
                         </div>
 
                         <div class="col-md-3 col-sm-12">
                             <div class="square-card">
-                            <a href="#" alt="square card"><img src="images/P4.JPG" width="100%" height="auto"></a>
-                                <div class="card-header"></div>
+                            <a href="#" alt="square card"><img src="images/P8.JPG" width="100%" height="auto"></a>
+                                <div class="overlay">
+                                    <h2>Photograph</h2>
+                                    <a id="info" href="images/P8.JPG">Click Here</a>
+                                </div>  
                             </div>
                         </div>
 
                         <div class="col-md-3 col-sm-12">
                             <div class="square-card">
                             <a href="#" alt="square card"><img src="images/P5.JPG" width="100%" height="auto"></a>
-                                <div class="card-header"></div>
+                                <div class="overlay">
+                                    <h2>Photograph</h2>
+                                    <a id="info" href="images/P5.JPG">Click Here</a>
+                                </div>  
                             </div>
                         </div>
 
                         <div class="col-md-3 col-sm-12">
                             <div class="square-card">
                             <a href="#" alt="square card"><img src="images/P6.JPG" width="100%" height="auto"></a>
-                                <div class="card-header"></div>
+                                <div class="overlay">
+                                    <h2>Photograph</h2>
+                                    <a id="info" href="images/P6.JPG">Click Here</a>
+                                </div>  
+                            </div>
+                        </div>
+
+                        <div class="col-md-3 col-sm-12">
+                            <div class="square-card">
+                            <a href="#" alt="square card"><img src="images/P4.JPG" width="100%" height="auto"></a>
+                                <div class="overlay">
+                                    <h2>Photograph</h2>
+                                    <a id="info" href="images/P4.JPG">Click Here</a>
+                                </div>  
                             </div>
                         </div>
 
                         <div class="col-md-3 col-sm-12">
                             <div class="square-card">
                             <a href="#" alt="square card"><img src="images/Logo.png" width="100%" height="auto"></a>
-                                <div class="card-header"></div>
+                                <div class="overlay">
+                                    <h2>Logo</h2>
+                                    <a id="info" href="images/Logo.png">Click Here</a>
+                                </div>  
                             </div>
                         </div>
 
